--- a/src/safenote_frontend/assets/main.css
+++ b/src/safenote_frontend/assets/main.css
@@ -1,37 +1,11 @@
-body {
-    font-family: sans-serif;
-    font-size: 1.5rem;
+@font-face {
+    font-family: Inter;
+    font-weight: 400;
+    src: url("Inter-Regular.ttf");
 }
 
-img {
-    max-width: 50vw;
-    max-height: 25vw;
-    display: block;
-    margin: auto;
-}
-
-form {
-    display: flex;
-    justify-content: center;
-    gap: 0.5em;
-    flex-flow: row wrap;
-    max-width: 40vw;
-    margin: auto;
-    align-items: baseline;
-}
-
-button[type="submit"] {
-    padding: 5px 20px;
-    margin: 10px auto;
-    float: right;
-}
-
-#greeting {
-    margin: 10px auto;
-    padding: 10px 60px;
-    border: 1px solid #222;
-}
-
-#greeting:empty {
-    display: none;
+@font-face {
+    font-family: Inter;
+    font-weight: 700;
+    src: url("Inter-SemiBold.ttf");
 }
