--- a/src/safenote_frontend/src/scss/_variables.scss
+++ b/src/safenote_frontend/src/scss/_variables.scss
@@ -1,5 +1,20 @@
-$red: red;
-$green: green;
-$blue: blue;
+$brand: #2D3648;
+$dark: #1A202C;
 
-label {color: $red};
+$background-dark: $dark;
+$outline-dark: $dark;
+$outline-light: #CBD2E0;
+$background-light: #EDF0F7;
+
+$white: #ffffff;
+$grey: #A0ABC0;
+$gray: $grey;
+
+$font-main: 'Inter', sans-serif;
+
+$bp-sm: 640px;
+$bp-md: 992px;
+$bp-lg: 1200px;
+
+$border-radius-default: 6px;
+$max-width-default: 1045px;
