Expanded README. Contact, Donate and Privacy Policy pages. Minor improvements.

--- a/src/safenote_frontend/src/scss/_variables.scss
+++ b/src/safenote_frontend/src/scss/_variables.scss
@@ -11,6 +11,7 @@ $grey: #A0ABC0;
 $gray: $grey;
 
 $font-main: 'Inter', sans-serif;
+$font-secondary: 'Roboto', sans-serif;
 
 $bp-sm: 640px;
 $bp-md: 992px;
