--- a/src/safenote_frontend/assets/main.css
+++ b/src/safenote_frontend/assets/main.css
@@ -9,3 +9,9 @@
     font-weight: 700;
     src: url("Inter-SemiBold.ttf");
 }
+
+@font-face {
+    font-family: Roboto;
+    font-weight: 500;
+    src: url("Roboto-Medium.ttf");
+}
